# mon_oeil

./: .dockerignore  Cargo.toml  Dockerfile  dev.env  readme.md
.github/workflows/: CD.yml  CI-CD.yml  CI.yml  rust.yml
mon_oeil_api/: Cargo.toml
mon_oeil_api/src/: db.rs  main.rs
mon_oeil_auth/: Cargo.toml
mon_oeil_auth/src/: db.rs  lib.rs  main.rs
mon_oeil_auth/src/handlers/: mod.rs
mon_oeil_auth/src/models/: mappers.rs  mod.rs
mon_oeil_auth_shared/: Cargo.toml
mon_oeil_auth_shared/src/: lib.rs
mon_oeil_core/: Cargo.toml
mon_oeil_core/src/: db.rs  lib.rs  model.rs
mon_oeil_core/src/handlers/: descriptions.rs  gestures.rs  meanings.rs  mod.rs  pictures.rs
mon_oeil_core/src/models/: mappers.rs  mod.rs
mon_oeil_db/: Cargo.toml  schema.sql
mon_oeil_db/src/: lib.rs
mon_oeil_db/src/model/: mod.rs  raw.rs
mon_oeil_db/src/models/: mappers.rs  mod.rs  raw.rs
mon_oeil_db/tests/: client.rs
mon_oeil_file/: Cargo.toml
mon_oeil_file/src/: lib.rs  main.rs  storage.rs
mon_oeil_front/: README.md  package-lock.json  package.json  test.html
mon_oeil_front/public/: index.html
mon_oeil_front/src/: App.vue  main.js  service.js
mon_oeil_front/src/components/: Description.vue  DescriptionEditor.vue  DescriptionLayout.vue  Editor.vue  Gesture.vue  GestureEditor.vue  GestureLayout.vue  Intro.vue  Lang.vue  LangLayout.vue  LangsSelection.vue  Login.vue  Meaning.vue  MeaningEditor.vue  MeaningLayout.vue  Menu.vue  Pagination.vue  Picture.vue  PictureEditor.vue  PictureLayout.vue  Search.vue  Viewer.vue
mon_oeil_front/src/components/edit/: DescriptionEditor.vue  GestureEditor.vue  LangsSelector.vue  MeaningEditor.vue  PictureCreator.vue  PictureEditor.vue
mon_oeil_front/src/components/gestures/: Picture.vue
mon_oeil_front/src/components/view/: Description.vue  Gesture.vue  Intro.vue  Meaning.vue  Picture.vue
mon_oeil_front/src/router/: index.js
mon_oeil_front/src/store/: index.js
mon_oeil_front/src/views/: About.vue  Contribute.vue  ContributeSaved.vue  Home.vue
mon_oeil_srv/: Cargo.toml  schema.sql
mon_oeil_srv/asset/: dummy.txt
mon_oeil_srv/src/: auth.rs  core.rs  lib.rs  main.rs
mon_oeil_srv/tests/: auth.rs  descriptions.rs  gestures.rs  meanings.rs  pictures.rs  utils.rs
mon_oeil_storage/: Cargo.toml
mon_oeil_storage/src/: lib.rs  storage.rs
mon_oeil_storage/src/models/: mappers.rs  mod.rs
