[package]
authors = ["delasalle-sio-olivon <delasalle.sio.olivon.a@gmail.com>"]
edition = "2018"
name = "mon_oeil_api"
version = "0.1.0"

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix_derive = "0.5.0"
bytes = "0.5.6"
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.8"
log = "0.4.11"
mon_oeil_auth_shared = {path = "../mon_oeil_auth_shared"}
mon_oeil_db = {path = "../mon_oeil_db"}
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
actix-web-httpauth = "0.4.2"
actix-cors = "0.2.0"

[dev-dependencies]
faux = "0.0.5"
