[package]
name = "mon_oeil_auth_shared"
version = "0.1.0"
authors = ["Adrienol <delasalle.sio.olivon.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frank_jwt = "3.1.2"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"