[package]
authors = ["Greedeuh <adrien.olivon.dev@gmail.com>"]
edition = "2018"
name = "mon_oeil_core"
version = "0.1.0"

[dependencies]
log = "0.4.11"
mon_oeil_auth_shared = {path = "../mon_oeil_auth_shared"}
mon_oeil_db = {path = "../mon_oeil_db"}
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"

[dev-dependencies]
faux = "0.0.6"
tokio = {version = "0.3.3", features = ["macros", "rt-multi-thread"] }
