[package]
authors = ["Greedeuh <adrien.olivon.dev@gmail.com>"]
edition = "2018"
name = "mon_oeil_db"
version = "0.1.0"

[dependencies]
deadpool-postgres = "0.5"
futures = "0.3"
linked-hash-map = "0.5"
tokio = "^0.2.2"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = {version = "0.5", features = ["with-uuid-0_8"]}
uuid = {version = "0.8", features = ["v4"]}

[dev-dependencies]
dotenv = "0.15"
tokio-test = "0.2"
serial_test = "0.5.0"