[package]
name = "mon_oeil_file"
version = "0.1.0"
authors = ["Adrienol <delasalle.sio.olivon.a@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix_derive = "0.5.0"
actix-multipart = "0.2.0"
async-std = "1.6.3"
futures = "0.3"
sanitize-filename = "0.2"
failure = "0.1.8"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
regex = "1.3.9"
uuid = "0.8"
bytes = "0.5.6"
mon_oeil_auth_shared = {path = "../mon_oeil_auth_shared"}
actix-web-httpauth = "0.4.2"
dotenv = "0.15.0"

[dev-dependencies]
faux = "0.0.5"
tokio-test = "0.2.1"