[package]
name = "mon_oeil_srv"
version = "0.1.0"
authors = ["Adrien Olivon <adrien.olivon.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix_derive = "0.5.0"
bytes = "0.5.6"
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.8"
log = "0.4.11"
mon_oeil_core = {path = "../mon_oeil_core"}
mon_oeil_auth = {path = "../mon_oeil_auth"}
mon_oeil_db = {path = "../mon_oeil_db"}
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
actix-web-httpauth = "0.4.2"
actix-cors = "0.2.0"
lazy_static = "1.4.0"

[dev-dependencies]
serial_test = "0.5.0"
postgres = "0.18.1"
mon_oeil_auth_shared = {path = "../mon_oeil_auth_shared"}

