[package]
name = "mon_oeil_storage"
version = "0.1.0"
authors = ["Adrienol <adrien.olivon.dev@gmail.com>"]
edition = "2018"


[features]
default = []

mock = ["mockall"]

[dependencies]
cloud-storage = { git="https://github.com/Greedeuh/cloud-storage-rs" }
mockall = { version = "0.8.3", optional = true }
cfg-if = "1.0.0"


[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "0.2.2", features = [ "full" ] }
reqwest = "0.10.8"
